# cpp_dev_library

./: .gitignore  CMakeLists.txt  README.md
examples/: README.txt
examples/book_manage_system/: Book.cpp  Book.h  Manager.cpp  Manager.h  README.md  Reader.cpp  Reader.h  book.txt  main.cpp  manager.txt  reader.txt
examples/common_cpp_so/: CMakeLists.txt  generate.sh
examples/common_cpp_so/lib/mqtt_client_so/: mqtt_client.h
examples/common_cpp_so/src/: hello.cc  mqtt_client.cc
examples/common_cpp_so/test/: main.cpp  mqtt_client.h  mqtt_demo.cpp  openssl_code.h
opencv/: CMakeLists.txt  README.md  build.sh  clean.sh
opencv/1-image_basic/: main.cpp
opencv/2-video_basic/: main.cpp
opencv/3-opencv_tool/: CMakeLists.txt  createButton.cpp  main.cpp  opengl.cpp  photoTool.cpp  viz3d.cpp
opencv/opencv_demo/: Makefile  README.md  main.cpp
opencv/opencv_demo/camera_calibrate/: camera_calibrate.cpp  camera_calibrate_tofile.cpp  get_images.cpp
opencv/opencv_demo/cv_lane_traffic_detect/: CMakeLists.txt  lane2.cpp  main.cpp  traffic_light.cpp
opencv/opencv_demo/cv_lane_traffic_detect/data/: README.md
opencv/opencv_demo/cv_move_check/: main.cpp
opencv/opencv_demo/fisheye_calib/: fisheye_calib_img.cpp  fisheye_calib_img2.cpp  fisheye_calib_usb.cpp
opencv/opencv_demo/opencv-utils/base_utils/: CMakeLists.txt
opencv/opencv_demo/opencv-utils/test_cpp/: CMakeLists.txt
opencv/opencv_demo/single_camera_calibrate/: README.md  main.cpp  single_camera_calibrate.cpp  single_camera_calibrate.h
opencv/opencv_demo/stitch_shit/: CMakeLists.txt  build.sh  clean.sh  main.cpp  test.cpp
opencv/pcl/: CMakeLists.txt  README.md  build.sh  clean.sh  sample10_octree.cpp  sample11_pathThrough.cpp  sample12_statisticalRemoval.cpp  sample13_keypoints.cpp  sample14_ransac.cpp  sample15_normalEstimation.cpp  sample16_iterative_closest_point.cpp  sample17_ndt.cpp  sample18_icp.cpp  sample1_pcdRead.cpp  sample2_writePcd.cpp  sample3_concatenateClouds.cpp  sample4_voxelGrid.cpp  sample5_clusterSeg.cpp  sample6_cloudViewer.cpp  sample7_pclVisualizer.cpp  sample8_transform.cpp  sample9_kdTree.cpp
opencv/pcl/pcl-app/: CMakeLists.txt  README.md
opencv/pcl/pcl-app/segmentation/: cluster_extraction.cpp  planar_segmentation.cpp
opengl/: README.md
opengl/1-glfw+glad+glut+imgui/: CMakeLists.txt  main.cpp
opengl/1-glfw+glad+glut+imgui/env/: glad.c
opengl/1-glfw+glad+glut+imgui/env/include/glad/: glad.h
qt/: README.md
qt/1-widget_demo/: main.qrc  subwidget.cpp  subwidget.h  subwidget.ui  widget.cpp  widget.h  widget.ui  widget_demo.pro
qt/10-qt_sqlite_basic/: mainwindow.cpp  qt_sqlite_basic.pro  sqlitebasic.cpp  sqlitebasic.h
qt/11-qt_weather_http_json/qt_weather_http/: qt_weather_http.pro  widget.cpp  widget.h
qt/12-qt_audio_player/: AudioPlayer.pro  README.md  audioplayer.cpp  audioplayer.h  audioplayer.ui
qt/13-qcustomplot/examples/qt_qcustomplot/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_qcustomplot.pro
qt/2-signal_slot/: commander.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  signal_slot.pro  soldier.cpp  soldier.h
qt/3-color_slider/: color_slider.pro  widget.cpp  widget.h  widget.ui
qt/4-list_demo/: widget.h
qt/5-table_demo/: widget.cpp
qt/6-TempCurve/: widget.cpp  widget.h  widget.ui
qt/7-painter_sin_event/: painter_sin_event.pro  widget.cpp  widget.h
qt/8-tcp_udp/: tcp_udp.pro  widget.cpp  widget.h  widget.ui
qt/9-qt_dashboard/: mainwindow.cpp  mainwindow.h
ros/: README.md
ros/carla_ros_bridge_pnc/: run.sh
ros/fastdds_helloworld/ddstest/: CMakeLists.txt  HelloWorld.cxx  HelloWorld.idl  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp
ros/fastdds_helloworld/src/: HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp
ros/ros-bridge-0.9.11/src/ros-bridge/: README.md
ros/ros-cpp-helloros/: README.md
ros/ros_opencv_video/: run_pub.sh  run_sub.sh
ros/ros_opencv_video/src/image_pub/: CMakeLists.txt  package.xml
ros/ros_opencv_video/src/image_pub/src/: image_pub.cpp
ros/ros_opencv_video/src/image_sub/: CMakeLists.txt  package.xml
ros/ros_pcl_pcd/: README.md  clean.sh  run_pub.sh  run_sub.sh
ros/ros_pcl_pcd/src/pcd_pub/: CMakeLists.txt  package.xml
ros/ros_pcl_pcd/src/pcd_pub/src/: pcd_pub.cpp
ros/ros_pcl_pcd/src/pcd_sub/: CMakeLists.txt  package.xml
ros/ros_pub_example_rviz/: README.md  map.txt  path.txt
ros/ros_service_example/: run.sh
ros/ros_service_example/src/ros_service_example_cpp/: run.sh
script/java/: README.md
script/java/java_springboot/: pom.xml
script/java/java_test/: pom.xml
script/javascript/: README.md
script/matlab/: a1Game_SaoLei.m  a2Function_sanjiaohanshu.m  a4GUI_xiaoqiu_speed.m  a7Function_sinx.m
script/python/pyqt5-example/ext/: DataGrid.spec
src/: README.md
src/algoutils/: algoutils.cc  algoutils.hpp
src/algoutils/geometry/: CoorConv.h  WGS2UTM.cpp  main.cpp
src/cryptoutils/: cryptoutils.cc  cryptoutils.hpp
src/dsutils/: dsutils.cc  dsutils.hpp
src/ioutils/: ioutils.cc  ioutils.hpp  test.cpp
src/ioutils/csv_reader/: build.sh  main.cpp  scene13_vcar1.csv  scene13_vcar2.csv
src/ioutils/device/: 485.cpp  keyboard.cpp
src/logutils/: logutils.cc  logutils.hpp
src/mathutils/: gdal.cpp  mathutils.cc  mathutils.hpp
src/networklib/: networklib.cc  networklib.hpp
src/networklib/minio-cpp-sdk/src/: http_client.cpp  http_client.hpp  ilogger.cpp  ilogger.hpp  main.cpp  minio_client.cpp  minio_client.hpp
src/networklib/mqtt/: build.sh  mqtt_demo.cpp  mqtt_json.cpp
src/networklib/udp_multicast/: multicast_client.cpp  multicast_server.cpp
src/networklib/ws/: build.sh  client.cpp  server.cpp
src/stringutils/: stringutils.cc  stringutils.hpp
src/threadlib/: threadlib.cc  threadlib.hpp
src/timeutils/: timeutils.cc  timeutils.hpp
test/: config.ini  log.txt  student.proto  test_algoutils.cc  test_cryptoutils.cc  test_dsutils.cc  test_ioutils.cc  test_logutils.cc  test_mathutils.cc  test_networklib.cc  test_networklib2.cc  test_stringutils.cc  test_threadlib.cc  test_timeutils.cc
tools/: awesome-cpp.md  build.sh  clean.sh  leetcode-cpp.md
(+16 files in other folders)
